Adding function of deleting last written character in input field.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <button onclick="appendToDisplay('.')">.</button>
             <button onclick="calculate()">=</button>
             <button class="operator_btn" onclick="clearDisplay()">C</button>
+            <button onclick="deleteFromDisplay()" class="operator_btn">&#10006</button>
         </div>
     </div>
 
